--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,31 +22,13 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="jumbotron">
-			<h1>Michael Bernstein</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
-		</div>
+
+		{{> jumbotron this}}
 	
-	    <ol>
-	    {{#each projects}}
-	      <li><a href="#{{id}}">{{name}}</a></li>
-	    {{/each}}
-	    </ol>
+		{{> thumb this}}
 
+		{{> proj this}}
 
-		<h4>Projects</h4>
-		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
-		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
-		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		
-		{{#each projects}}
-			<div class="project" id="{{id}}">
-				<a href="project/{{name}}" class="thumbnail">
-					<img src="images/{{image}}" class="img">
-					<p>{{name}}</p>
-				</a>
-			</div>
-		{{/each}}
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
